# Chatbot-Rag-Project

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  build.sh  chatbot-architecture-spec.md  clients.xlsx  clients_onboarding_ready.xlsx  clients_rows.csv  index.html  logs.txt  pyproject.toml  read_excel.py  render.yaml  requirements.txt  test_chat.json
.github/workflows/: deploy.yml
api/: admin_routes.py  admin_ui.html  app.py  book.html  routes.py
chatbot/: __init__.py  config.py  pipeline.py
chatbot/db/: __init__.py  migrate_lancedb.py  migrations.sql
chatbot/llm/: __init__.py
chatbot/retrieval/: chunker.py
chatbot/stages/: __init__.py  stage1_classifier.py  stage2_safety.py  stage3_retrieval.py  stage4_generation.py  stage5_humanizer.py
clients/duncan_firm/: config.yaml
clients/duncan_immigration/: config.yaml
clients/example_client/: config.yaml
onboarding/: __init__.py  crawler.py  onboard.py  pdf_parser.py
tests/: test_api.py  test_pipeline.py  test_retrieval.py  test_stages.py
